@@ -196,7 +196,8 @@ t/1124_save_pdf_with_non-utf8.t
 t/1125_save_pdf_with_1bpp.t
 t/113_save_pdf_with_downsample.t
 t/114_cancel_save_pdf.t
-t/115_save_pdf_with_metadata.t
+t/1151_save_pdf_with_metadata.t
+t/1152_save_pdf_with_old_metadata.t
 t/1161_save_multipage_pdf_with_utf8.t
 t/1162_save_multipage_pdf.t
 t/1171_prepend_pdf.t
@@ -208,7 +209,8 @@ t/121_save_djvu.t
 t/122_save_djvu_with_text.t
 t/123_save_djvu_with_hocr.t
 t/124_cancel_save_djvu.t
-t/125_save_djvu_with_metadata.t
+t/1251_save_djvu_with_metadata.t
+t/1252_save_djvu_with_old_metadata.t
 t/126_save_djvu_with_error.t
 t/131_save_tiff.t
 t/132_cancel_save_tiff.t
