@@ -7,6 +7,8 @@
 * + --import command-line option. Closes Launchpad (Ubuntu) bug #312839:
   (needs command line options for Gnome integration)
 * Fixed bug preventing append/prepend PDF in combination with set timestamp
+* Catch error setting timestamp for dates prior to 1970.
+  Closes bug #234 (seems to be stuck after closing the pdf)
 
 
 1.6.0 (02.12.2016):
